# arithmetic_type_to_name

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  arithmetic_type_to_name.hpp  examples.cpp
.github/: pull_request_template.md
.github/workflows/: compiler_test.yml
tests/: CMakeLists.txt  arithmetic_type_to_name.cpp
